# skeleton

./: .clang-format  CMakeLists.txt
src/: Application.cpp  Source.cpp
src/GUI/: Button.cpp  Button.h  Cursor.cpp  GUIheaders.h  InputBox.cpp  Prompt.cpp  TextBox.cpp  TextBox.h
src/Managers/: ButtonController.cpp  ButtonController.h  CacheSystem.cpp  CacheSystem.h  InputController.cpp  SFMLAudioProvider.cpp  SFMLAudioProvider.h  StateManager.h
src/States/: FrameworkSplashScreen.cpp  State.h
src/Util/: FPSCounter.cpp
